# ze-clock

./: .clang-format  .gitignore
app/: CMakeLists.txt  esp32_lolin_oled.overlay  prj.conf  west.yml
app/boards/xtensa/esp32_lolin_oled/: Kconfig.board  Kconfig.defconfig  esp32_lolin_oled-pinctrl.dtsi  esp32_lolin_oled.dts  esp32_lolin_oled.yaml  esp32_lolin_oled_defconfig
app/boards/xtensa/esp32_lolin_oled/doc/: index.rst
app/src/: logo_image.h  main.c  simple.proto
